# baponi-biomni

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: ai-researcher.md  technical-pm.md
.claude/skills/create-prd/: SKILL.md
.claude/skills/gemini-cli/: SKILL.md
.claude/skills/open-targets/: SKILL.md
.github/workflows/: build-sandbox-image.yml
docker/: Dockerfile.sandbox  install_r_packages.R
docs/: requirements.md  sandbox_image.md  solution_design.md
docs/analyses/ipf_target_prioritisation/: G_telomere_findings.md  H_bulk_rnaseq_findings.md  I_single_cell_findings.md  K_deconvolution_findings.md  L_toxicity_findings.md  M_rank_aggregation.md  PLAN.md  report.md
docs/sdlc/: experience_log.md
examples/: admet.py  plot_demo.py
sandbox_scripts/: README.md  geo_download.py
src/baponi_biomni/: __init__.py  errors.py  executor.py  patch.py  prologue.py  ui.py
tests/: conftest.py  test_executor.py  test_make_agent.py  test_patch.py  test_plot_capture.py  test_prologue.py  test_real_biomni_patch.py
